# seqwalk

./: .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/seqwalk/: __init__.py  analysis.py  design.py  filtering.py  generation.py  io.py  libs.py
src/seqwalk/prebuilt_libs/: kishi2018.txt
tests/: test_seqwalk.py
